# gps_compass_project

./: CMakeLists.txt  README.md  prj.conf
.claude/: settings.local.json
boards/: nucleo_l432kc.overlay
src/: command_parser.c  gps_config.c  gps_config.h  hmc5883l.c  hmc5883l.h  ht1621.c  ht1621.h  main.c  mpu6050_wrapper.c  mpu6050_wrapper.h
